--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -89,6 +89,7 @@ th{
   background-size: auto;
   background-repeat: no-repeat;
   min-height: 185px;
+  @apply bg-gray-100;
 }
 .mark ul li {
   margin-right: .5rem;
@@ -345,7 +346,7 @@ a.btn-cta {
   box-shadow:0px 2px 6px -1px #bbb;
 }
 .job-btn:hover {
-  box-shadow: none;
+  box-shadow: 0 0.125rem 2rem 0 rgba(0, 0, 0, 0.15);
 }
 .job-btn p {
   margin: 0;
@@ -411,19 +412,25 @@ label{
 	@apply font-medium;
 }
 input[type='text'], textarea {
-	@apply bg-white appearance-none w-full py-4 px-4 text-gray-700 leading-tight;
+	@apply bg-white appearance-none w-full pt-4 pb-2 mb-3 px-4 text-gray-700 leading-tight;
 }
 input[type='text']:focus, textarea:focus{
 	@apply outline-none shadow-outline;
 }
 input[type='checkbox']{
-	@apply text-blue-800 bg-red-800;
+	@apply text-blue-800 bg-red-800 my-3;
+}
+input[type='checkbox']:first-of-type {
+  margin-top: 1rem;
+}
+input[type='checkbox']:last-of-type {
+  margin-bottom: 1.5rem;
 }
 input.error {
 	@apply shadow appearance-none border border-red-500 bg-red-100 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight;
 }
 select{
-	@apply block appearance-none w-full border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight;
+	@apply block appearance-none w-full border border-gray-200 text-gray-700 mb-3 py-3 px-4 pr-8 rounded leading-tight;
 }
 select:focus{
  @apply   outline-none shadow-outline bg-white border-green-700;
@@ -1008,16 +1015,15 @@ footer li a {
   }
   .banner-video-wrapper {
     position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 25px;
-    height: 0;
-    max-width: 100%;
-    margin: 0 auto -16.25%;
+    top: 0;
+    left: 0;
+    height: 100%;
+    z-index: -1;
     pointer-events: none;
   }
   .banner-video-overlay {
     background-color:rgba(0, 44, 88, .65);
-    z-index: 2;
+    z-index: 1;
     width: 100vw;
     height: 630px;
     position: absolute;
@@ -1025,18 +1031,20 @@ footer li a {
     left: 0;
   }
   .banner-video-wrapper iframe, .banner-video-wrapper video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    max-height: 630px;
     display: block;
-  }
-  .banner-box {
     position: absolute;
-    top: 220px;
+    top: 50%;
+    left: 50%;
+    width: 100vw;
+    height: 100%;
+    min-height: 630px;
+    min-width: 177.77vh;
+    transform: translate(-50%, -50%);
   }
+}
+.banner-box {
+  position: relative;
+  top: 200px;
 }
 .videoWrapper {
   position: relative;
