--- a/public/styles.css
+++ b/public/styles.css
@@ -1085,7 +1085,7 @@ video {
 }
 
 .font-display {
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
 }
 
 .font-body {
@@ -1340,10 +1340,6 @@ video {
   padding: 1.5rem;
 }
 
-.p-8 {
-  padding: 2rem;
-}
-
 .px-0 {
   padding-left: 0;
   padding-right: 0;
@@ -1562,12 +1558,6 @@ video {
   color: rgba(102, 102, 102, var(--text-opacity));
 }
 
-.hover\:text-blue-500:hover {
-  --text-opacity: 1;
-  color: #0d559c;
-  color: rgba(13, 85, 156, var(--text-opacity));
-}
-
 .uppercase {
   text-transform: uppercase;
 }
@@ -1779,7 +1769,7 @@ th{
 .banner-text p {
   font-size: 18px;
   line-height: 25px;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
   font-weight: 600;
 }
 
@@ -1807,7 +1797,7 @@ th{
 
 .mark ul li {
   margin-right: .5rem;
-  margin-bottom: .85rem;
+  margin-bottom: .975rem;
 }
 
 .required {
@@ -1899,7 +1889,8 @@ th{
   line-height: 24px;
   letter-spacing: .6pt;
   font-weight: 600;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
+  text-transform: uppercase;
 }
 
 .phone-text {
@@ -1916,14 +1907,14 @@ th{
   line-height:20px;
   letter-spacing: .6pt;
   font-weight:500;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
 }
 
 .heading-xs{
   font-size:21px;
   line-height:32px;
   font-weight:600;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
 }
 
 .heading-s {
@@ -1931,7 +1922,7 @@ th{
   line-height:26px;
   letter-spacing: .1pt;
   font-weight:600;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
 }
 
 .heading2{
@@ -1939,14 +1930,14 @@ th{
   line-height:26px;
   letter-spacing: .1pt;
   font-weight:600;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
 }
 
 .heading{
   font-size:28px;
   line-height:48px;
   font-weight:600;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
 }
 
 .page-heading{
@@ -1954,7 +1945,7 @@ th{
   line-height:32px;
   letter-spacing:.24pt;
   font-weight:600;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
 }
 
 .section-heading{
@@ -1962,7 +1953,7 @@ th{
   line-height:32px;
   letter-spacing: .20pt;
   font-weight:600;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
 }
 
 .cta-heading{
@@ -1970,7 +1961,7 @@ th{
   line-height:46px;
   letter-spacing: .24pt;
   font-weight:600;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
 }
 
 .heading-xl{
@@ -1978,28 +1969,28 @@ th{
   line-height:46px;
   letter-spacing: .24pt;
   font-weight:600;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
 }
 
 .heading-xxl{
   font-size:48px;
   line-height:72px;
   font-weight:600;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
 }
 
 .heading-d{
   font-size:60px;
   line-height:80px;
   font-weight:600;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
 }
 
 .heading-dxl{
   font-size:72px;
   line-height:96px;
   font-weight:400;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
 }
 
 .border-1{
@@ -2024,7 +2015,7 @@ th{
 
 button{
   border-width: 1px;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
   font-weight: 600;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -2094,7 +2085,7 @@ button.btn-lg{
   border-width: 1px;
   letter-spacing: .4pt;
   text-align: center;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
   font-weight: 600;
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -2142,7 +2133,7 @@ a.btn-cta {
   line-height: 32px;
   letter-spacing: .1pt;
   border-width: 1px;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
   font-weight: 600;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -2209,7 +2200,7 @@ a.btn-cta {
   border: none;
   font-weight: 400;
   padding: 0.5rem;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
   --bg-opacity: 1;
   background-color: #06a350;
   background-color: rgba(6, 163, 80, var(--bg-opacity));
@@ -2231,7 +2222,7 @@ a.btn-cta {
   font-size: 18px;
   line-height: 20px;
   letter-spacing: .4pt;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
   text-transform: uppercase;
   font-weight: 500;
   --bg-opacity: 1;
@@ -2270,7 +2261,7 @@ a.btn-cta {
   letter-spacing: .4pt;
   min-height: 60px;
   height: 40%;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
   font-weight: 600;
   text-transform: uppercase;
   --bg-opacity: 1;
@@ -2517,7 +2508,7 @@ p.toobig{ min-width:91px;
   line-height:46px;
   letter-spacing: .24pt;
   font-weight:600;
-  font-family: Proxima Nova, sans-serif
+  font-family: Proxima Nova, proxima-nova, sans-serif
 }
 
 .read h2 {
@@ -2525,7 +2516,7 @@ p.toobig{ min-width:91px;
   line-height:32px;
   letter-spacing:.24pt;
   font-weight:600;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
@@ -2535,7 +2526,7 @@ p.toobig{ min-width:91px;
   line-height:26px;
   letter-spacing: .1pt;
   font-weight:600;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
@@ -2544,7 +2535,7 @@ p.toobig{ min-width:91px;
   font-size:21px;
   line-height:32px;
   font-weight:600;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
@@ -2554,7 +2545,7 @@ p.toobig{ min-width:91px;
   line-height:20px;
   letter-spacing: .6pt;
   font-weight:500;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
@@ -2811,6 +2802,14 @@ a.skip-main:focus, a.skip-main:active {
   font-size: 18px;
 }
 
+.blue-boxes {
+  font-family: Proxima Nova, proxima-nova, sans-serif;
+}
+
+.blue-boxes p {
+  margin: .05rem 0;
+}
+
 .careers p {
   padding: 0;
   margin: 0;
@@ -2833,20 +2832,20 @@ a.skip-main:focus, a.skip-main:active {
   width: 100%;
 }
 
-a .card h3, a .card h4 {
+.card h3, .card h4 {
   font-size: 18px;
   line-height: 20px;
   letter-spacing: .4pt;
   --text-opacity: 1;
   color: #2D2D2D;
   color: rgba(45, 45, 45, var(--text-opacity));
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
   font-weight: 600;
   text-transform: uppercase;
 }
 
-a .card h5 {
-  font-size: 14px;
+.card h5 {
+  font-size: 16px;
   line-height: 18px;
   letter-spacing: .1pt;
   --text-opacity: 1;
@@ -2918,9 +2917,9 @@ blockquote footer a {
   font-style: normal;
 }
 
-.quote {
+.quote, p.quote {
   font-style: normal;
-  font-family: Proxima Nova, sans-serif;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
   font-weight: 600;
 }
 
@@ -2965,7 +2964,7 @@ footer li a {
 /* Timeline specific CSS */
 
 .timeline-title {
-  font-family: "Proxima Nova", Helvetica, sans-serif;
+  font-family: "Proxima Nova", "proxima-nova", Helvetica, sans-serif;
   font-size: 24px;
   font-weight: 600;
   letter-spacing: 1.1pt;
@@ -3025,6 +3024,7 @@ footer li a {
   text-transform: uppercase;
   white-space: nowrap;
   color: #0d559c;
+  font-family: Proxima Nova, proxima-nova, sans-serif;
 }
 
 /*----- TIMELINE MARKER -----*/
@@ -3248,7 +3248,7 @@ footer li a {
     line-height:32px;
     letter-spacing:.24pt;
     font-weight:600;
-    font-family: Proxima Nova, sans-serif;
+    font-family: Proxima Nova, proxima-nova, sans-serif;
   }
 }
 
@@ -3665,10 +3665,6 @@ footer li a {
     text-align: left;
   }
 
-  .md\:text-center {
-    text-align: center;
-  }
-
   .md\:w-auto {
     width: auto;
   }
@@ -3969,6 +3965,10 @@ footer li a {
 
   .lg\:w-5\/6 {
     width: 83.333333%;
+  }
+
+  .lg\:w-11\/12 {
+    width: 91.666667%;
   }
 
   .lg\:w-full {
