--- a/public/styles.css
+++ b/public/styles.css
@@ -1766,7 +1766,7 @@ th{
   background-position: 1% 1%;
   background-size: auto;
   background-repeat: no-repeat;
-  min-height: 630px;
+  min-height: 505px;
 }
 
 .banner-box {
@@ -1842,7 +1842,6 @@ th{
     rgba(0, 44, 88, .65)
     ),
     url(assets/img/location-banner.jpg);
-  12
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -2329,6 +2328,10 @@ a.btn-cta {
   color: rgba(45, 45, 45, var(--text-opacity));
 }
 
+.menu-title.blue{
+  color: #0d559c;
+}
+
 .menu-title:hover {
   --text-opacity: 1;
   color: #0d559c;
@@ -2692,8 +2695,6 @@ header nav .vertical-menu a {
   display: inline-block;
   cursor: pointer;
   float:right;
-  border-width: 1px;
-  border-radius: 0.25rem;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
   padding-top: 0.25rem;
@@ -2962,6 +2963,14 @@ a .card p{
   color: rgba(45, 45, 45, var(--text-opacity));
 }
 
+.industry {
+  flex: 1 0 auto;
+}
+
+.industry h4 {
+  margin-bottom: 0.5rem;
+}
+
 .industry p {
   font-size:14px;
   letter-spacing: .1pt;
@@ -3032,6 +3041,10 @@ footer a {
   --text-opacity: 1;
   color: #fff;
   color: rgba(255, 255, 255, var(--text-opacity));
+}
+
+footer a.arrow-links:hover {
+  color: white;
 }
 
 footer li {
@@ -3329,7 +3342,7 @@ footer li a {
 
 @media (max-width:1024px) {
   .mark {
-    background-position: 98% 97%;
+    background-position: 90% 90%;
   }
 
   .markTwo {
@@ -3428,6 +3441,11 @@ footer li a {
 /* because tablets */
 
 @media (min-width:1025px) {
+  header nav .vertical-menu a {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
   img.logo {
     width:100%;
   }
@@ -3456,7 +3474,7 @@ footer li a {
 
   .banner-home {
     background: none;
-    /* min-height:auto; <--- must re-add value at this breakpoint */
+    min-height: 630px;
   }
 
   .banner-video-wrapper {
