--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -62,7 +62,7 @@ th{
   background-position: 1% 1%;
   background-size: auto;
   background-repeat: no-repeat;
-  min-height: 630px;
+  min-height: 505px;
 }
 .banner-box {
   position: relative;
@@ -122,7 +122,7 @@ th{
     rgba(0, 44, 88, .65),
     rgba(0, 44, 88, .65)
     ),
-    url('../img/location-banner.jpg');12
+    url('../img/location-banner.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -446,6 +446,9 @@ a.btn-cta {
   letter-spacing: .4pt;
   @apply font-display uppercase font-medium bg-white text-gray-900;
 }
+.menu-title.blue{
+  color: #0d559c;
+}
 .menu-title:hover {
   @apply text-blue-500 border-none;
 }
@@ -568,7 +571,7 @@ header nav .vertical-menu a {
   display: inline-block;
   cursor: pointer;
   float:right;
-  @apply border rounded px-2 py-1; 
+  @apply px-2 py-1; 
 }
 /* Meeting 2 */
 img.logo {width:85%; max-width:250px;}
@@ -744,6 +747,12 @@ a.skip-main:focus, a.skip-main:active {
 a .card p{
 	@apply text-gray-900;
 }
+.industry {
+  flex: 1 0 auto;
+}
+.industry h4 {
+  margin-bottom: 0.5rem;
+}
 .industry p {
   @apply text-small my-4;
 }
@@ -774,6 +783,9 @@ footer p {
 }
 footer a {
   @apply text-white;
+}
+footer a.arrow-links:hover {
+  color: white;
 }
 footer li {
   @apply mb-4;
@@ -1020,7 +1032,7 @@ footer li a {
 }
 @media (max-width:1024px) {
   .mark {
-    background-position: 98% 97%;
+    background-position: 90% 90%;
   }
   .markTwo {
     background: none;
@@ -1096,6 +1108,9 @@ footer li a {
 }
 /* because tablets */
 @media (min-width:1025px) {
+  header nav .vertical-menu a {
+    @apply mt-2 mb-2;
+  }
   img.logo {width:100%;}
   .container-main {
     max-width: 1290px;
@@ -1116,7 +1131,7 @@ footer li a {
   /* Value: 630px */
   .banner-home {
     background: none;
-    /* min-height:auto; <--- must re-add value at this breakpoint */
+    min-height: 630px;
   }
   .banner-video-wrapper {
     position: relative;
